--- a/TPINT_GRUPO_6_LAB4/.classpath
+++ b/TPINT_GRUPO_6_LAB4/.classpath
@@ -13,5 +13,26 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/mysql-connector-java-5.1.47-bin.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/tpFINAL/TrabajosLaboratorioIV/TPINT_GRUPO_6_LAB4/src/main/webapp/WEB-INF/lib/jstl-1.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/tpFINAL/TrabajosLaboratorioIV/TPINT_GRUPO_6_LAB4/src/main/webapp/WEB-INF/lib/taglibs-standard-impl-1.2.5.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/tpFINAL/TrabajosLaboratorioIV/TPINT_GRUPO_6_LAB4/src/main/webapp/WEB-INF/lib/taglibs-standard-spec-1.2.5.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
