--- a/TPINT_GRUPO_6_LAB4/.classpath
+++ b/TPINT_GRUPO_6_LAB4/.classpath
@@ -19,17 +19,17 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/tpFINAL/TrabajosLaboratorioIV/TPINT_GRUPO_6_LAB4/src/main/webapp/WEB-INF/lib/jstl-1.2.jar">
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/tpFINAL/TrabajosLaboratorioIV/TPINT_GRUPO_6_LAB4/src/main/webapp/WEB-INF/lib/taglibs-standard-impl-1.2.5.jar">
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/taglibs-standard-impl-1.2.5.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/GABRIELA/Desktop/tpFINAL/TrabajosLaboratorioIV/TPINT_GRUPO_6_LAB4/src/main/webapp/WEB-INF/lib/taglibs-standard-spec-1.2.5.jar">
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/taglibs-standard-spec-1.2.5.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
