--- a/TPINT_GRUPO_6_LAB4/.classpath
+++ b/TPINT_GRUPO_6_LAB4/.classpath
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-		<attributes>
-			<attribute name="module" value="true"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
     <attributes>
       <attribute name="module" value="true"/>
@@ -17,6 +15,16 @@
   <classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 
   <classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar">
+    <attributes>
+      <attribute name="module" value="true"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mysql-connector-java-5.1.47.jar">
+    <attributes>
+      <attribute name="module" value="true"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jbcrypt-0.4.jar">
     <attributes>
       <attribute name="module" value="true"/>
     </attributes>
